<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data></data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            style="@style/NoBarScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:context=".login.SignInFragment">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:focusableInTouchMode="true"
                android:paddingStart="@dimen/sign_in_flow_start_padding"
                android:paddingEnd="@dimen/sign_in_flow_end_padding">

                <TextView
                    style="@style/LoginText.Title"
                    android:layout_width="@dimen/big_button_width"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/sign_in_title_margin_top"
                    android:paddingStart="@dimen/sign_in_text_align_start_padding"
                    android:text="@string/sign_in_title" />

                <tv.caffeine.app.ui.CaffeineEditTextLayout
                    android:id="@+id/username_edit_text_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/sign_in_edit_text_one_margin_top"
                    android:hint="@string/unauth_hint_username"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLength="@integer/max_username_length"
                    app:isDarkMode="true" />

                <tv.caffeine.app.ui.CaffeineEditTextLayout
                    android:id="@+id/password_edit_text_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/sign_in_edit_text_secondary_top"
                    android:hint="@string/unauth_hint_password"
                    android:imeOptions="actionGo"
                    android:inputType="textPassword"
                    app:isDarkMode="true" />

                <TextView
                    style="@style/LoginText.Link"
                    android:id="@+id/reset_password_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/sign_in_body_text_top_margin"
                    android:paddingStart="@dimen/sign_in_text_align_start_padding"
                    android:text="@string/forgot_password" />

            </LinearLayout>
        </ScrollView>

        <TextView
            style="@style/LoginErrorText"
            android:id="@+id/form_error_text_view"
            android:layout_width="@dimen/medium_button_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/sign_in_button_top_margin"
            app:layout_constraintBottom_toTopOf="@id/sign_in_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/error_passwords_dont_match" />

        <Button
            style="@style/LoginButton"
            android:id="@+id/sign_in_button"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/sign_in_button_margin_bottom"
            android:enabled="false"
            android:text="@string/sign_in_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>