...
                android:id="@+id/new_account_button"
                android:layout_marginTop="16dp"
                android:text="@string/sign_up_with_email"/>

            <TextView
                style="@style/LinkText.Landing"
                android:id="@+id/sign_in_with_username_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="76dp"
                android:padding="4dp"
                android:text="@string/sign_in_with_username"/>
...
